# Image-processing-C

./: CMakeLists.txt  main.c  readlogo.py  xml.c
extractZip/: CMakeLists.txt  main.c
xmlToZip/: CMakeLists.txt  main.c
